week2: change swagger to api-docs route
